--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
-    <link rel="icon" href="IMG_20210811_193540.jpg"
+    <link rel="icon" href="images/IMG_20210811_193540.jpg"
     
   </head>
   <body id="top">
@@ -42,7 +42,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('cc-bg1.jpg')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="IMG_20210811_193540.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/IMG_20210811_193540.jpg" alt="Image"/></a></div>
           <div class="h2 title">HATİCE UĞURLU</div>
           <p class="category text-white">Salesforce Admınıstrator, Salesforce Developer</p>
         </div>
