--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('cc-bg1.jpg')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/arka plan.png')"></div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/IMG_20210811_193540.jpg" alt="Image"/></a></div>
@@ -66,8 +66,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Hatice Uğurlu. Web Developer, Graphic Designer and Photographer.</p>
-            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. </p>
+            <p>Hello! I am Hatice Uğurlu. Salesforce Admınıstrator, Salesforce Developer.</p>
+            <p>Highly innovative, flexible, and a self-directed person with the ability to multi-task in a fast-paced environment, motivated and enthusiastic Salesforce Administrator and Developer. Proven knowledge in declarative configuration with Salesforce Administrator  Certification and experienced not only in admin side but also in development side by taking place and responsibilities in teams and projects directed via Agile methodologies. Strong knowledge in Sales Cloud, Service Cloud, Force.com, Visual Force and Apex. Proficient in explaining complex data systems to a wide variety of audiences. Verified multitasker, independent worker, and team player. </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -83,7 +83,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+1718-111-0011</div>
+              <div class="col-sm-8">852369741</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
