update google analaytıc

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
     <link rel="icon" href="images/IMG_20210811_193540.jpg"
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5F1FRC52R5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5F1FRC52R5');
+</script>
   </head>
   <body id="top">
     <header>
